# manifoldRML

./: .gitignore  Main.hs  README.md  manifoldRML.cabal
src/: .#GraphBuilder.hs  GraphBuilder.hs  Main.hs  SimplicialComplex.hs
