name:                manifoldRML
version:             0.1.0.0
synopsis:            Further exploration into Riemann normal coordinates.
description:         This package currently only contains an implementation of "Riemannian Manifold Learning" by Tong Lin and Hongbin Zha.
license:             PublicDomain
license-file:        LICENSE
author:              Emmanuel Denloye-Ito
maintainer:          eod8tb@virginia.edu
copyright:           2015 Emmanuel Denloye-Ito
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
source-repository head
  type: git
  location: git://github.com/emmanueldenloye/manifoldRML.git                     

library
  ghc-options:         -O2 -Wall
  exposed-modules:     Main
  -- other-modules:       
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010

executable manifoldRML
  main-is:             Main.hs
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
